--- a/WEB/index.html
+++ b/WEB/index.html
@@ -10,7 +10,7 @@
   <title>Hard to Handle League</title>
 </head>
 
-<body>
+<body class="justify-content-center">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
